[gd_scene load_steps=2 format=3 uid="uid://dkfwlnhiyaafu"]

[ext_resource type="Script" path="res://scripts/PuzzleGrid.gd" id="1_bh7ap"]

[node name="PuzzleGrid" type="Node2D"]
script = ExtResource("1_bh7ap")

[node name="BlocksContainer" type="Node2D" parent="."]

[node name="WallsContainer" type="Node2D" parent="."]
z_index = -1

[node name="ObstaclesContainer" type="Node2D" parent="."]
z_index = 1
